--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
-    <!-- =========================
-     Analytics
-    ============================== -->
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-PGJ57P3');</script>
-    <!-- End Google Tag Manager -->
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112149666-1"></script>
-    <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
-     gtag('config', 'UA-112149666-1');
-    </script>
-
     <meta charset="UTF-8">
-    <meta name="description" content="Analíticas para entender a la audiencia antes de crear tu juego.">
-    <meta name="keywords" content="GameMetrics, Startup, Analytics, Metrics, Landing page, Registration, Landing, Login">
+    <meta name="description" content="Fran Kapilla">
+    <meta name="keywords" content="Cinema, Studio, Spain, Film">
     <meta name="author" content="Adrian Lopez">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- SITE TITLE -->
-    <title>GameMetrics</title>
+    <title>Fran Kapilla</title>
 
     <!-- =========================
      FAV AND TOUCH ICONS AND FONT
@@ -41,7 +21,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/favicons/favicon-72.png">
     <link rel="apple-touch-icon-precomposed" href="images/favicons/favicon-57.png">
 
-    <link href='https://fonts.googleapis.com/css?family=Cabin:400,600|Open+Sans:300,600,400' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Arial:400,600|Open+Sans:300,600,400' rel='stylesheet'>
 
     <!-- =========================
      STYLESHEETS
@@ -82,23 +62,6 @@
 <body>
 
     <!-- =========================
-     Analytics - Tags
-    ============================== -->
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGJ57P3"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-    <!-- =========================
-     PRE LOADER
-    ============================== -->
-    <!-- <div class="preloader">
-        <div class="status">
-            &nbsp;
-        </div>
-    </div> -->
-
-    <!-- =========================
      SECTION: HOME / HEADER
     ============================== -->
     <header class="header" data-stellar-background-ratio="0.5" id="home">
@@ -107,7 +70,7 @@
         <div class="overlay-layer">
 
             <!-- STICKY NAVIGATION -->
-            <div class="navbar navbar-inverse bs-docs-nav navbar-fixed-top sticky-navigation appear-on-scroll" role="navigation">
+            <div class="navbar navbar-inverse bs-docs-nav navbar-fixed-top sticky-navigation" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
 
@@ -161,7 +124,7 @@
                         <div class="intro-section">
 
                             <!-- MAIN MESSAGE -->
-                            <h1 class="intro white-text" style="margin-bottom: 60px;">Comprende a tus jugadores <br> como nunca antes</h1>
+                            <h1 class="uppercase intro white-text" style="margin-bottom: 60px;">A Vacation Photography Experience!</h1>
 
                             <!-- BUTTON -->
                             <div class="button">
@@ -566,7 +529,6 @@
     <script src="js/jquery.nav.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/nivo-lightbox.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
 
     <!-- CUSTOM JS  -->
     <script src="js/custom.js"></script>
