--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="container" style="margin-top: -5px;">
 
                 <!-- ONLY LOGO ON HEADER -->
-                <div class="only-logo">
+                <div class="only-logo wow fadeIn" data-wow-duration="1s">
                     <div class="navbar">
                         <div class="navbar-header">
                             <img src="images/logo.png" alt="">
@@ -123,13 +123,13 @@
                     <div class="col-md-12 header-container">
 
                         <!-- HEADING AND BUTTONS -->
-                        <div class="intro-section">
+                        <div class="intro-section wow fadeIn" data-wow-duration="2s" data-wow-delay="0.2s">
 
                             <!-- MAIN MESSAGE -->
                             <h1 class="uppercase intro white-text" style="margin-bottom: 60px;">A Vacation Photography Experience!</h1>
 
                             <!-- BUTTON -->
-                            <div class="button hidden-xs">
+                            <div class="button" style="margin-bottom: 75px;">
                                 <a href="#section1" class="btn btn-primary secondary-button">Book now</a>
                             </div>
                             <!-- /END BUTTON -->
@@ -145,63 +145,16 @@
     <!-- =========================
      SECTION: SERVICES
     ============================== -->
-    <section class="services grey-bg" id="benefits">
+    <section class="services" id="benefits">
         <div class="container">
 
             <!-- SECTION HEADER -->
             <div class="section-header">
-
-                <h2 class="dark-text"><strong>Te ayudamos a planear tus juegos</strong></h2>
-                <div class="colored-line">
-                </div>
-                <div class="sub-heading">
-                    Cuida de tu publico desde el principio. No esperes hasta que sea demasiado tarde.
-                </div>
+                <h2 class="dark-text">
+                  <strong>Te ayudamos a planear tus juegos</strong>
+                </h2>
             </div>
 
-            <div class="row">
-
-                <!-- SINGLE SERVICE -->
-                <div class="col-md-4 wow fadeIn" data-wow-offset="10" data-wow-duration="0.75s" data-wow-delay="0.2s">
-                    <div class="single-service border-bottom-hover-red">
-                        <div class="service-icon colored-text-blue">
-                            <span class="colored-text-blue icon-software-box-polygon"></span>
-                        </div>
-                        <h3 class="colored-text-blue">Target</h3>
-                        <p>
-                          Quien es la audiencia de juegos como el tuyo.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- SINGLE SERVICE -->
-                <div class="col-md-4 wow fadeIn" data-wow-offset="10" data-wow-duration="0.75s" data-wow-delay="0.4s">
-                    <div class="single-service border-bottom-hover-orange">
-                        <div class="service-icon colored-text-blue">
-                            <span class="icon-ecommerce-graph3"></span>
-                        </div>
-                        <h3 class="colored-text-blue">Market</h3>
-                        <p>
-                            El mejor país para enfocar tu marketing.
-
-                        </p>
-                    </div>
-                </div>
-
-                <!-- SINGLE SERVICE -->
-                <div class="col-md-4 wow fadeIn" data-wow-offset="10" data-wow-duration="0.75s" data-wow-delay="0.6s">
-                    <div class="single-service border-bottom-hover-green">
-                        <div class="service-icon colored-text-blue">
-                            <span class="icon-software-eyedropper"></span>
-                        </div>
-                        <h3 class="colored-text-blue">Genre</h3>
-                        <p>
-                            La mejor formula de genero y tema para tu juego.
-                        </p>
-                    </div>
-                </div>
-
-            </div>
         </div>
     </section>
 
