--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                         <!-- LOGO ON STICKY NAV BAR -->
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#stamp-navigation">
-                            <span class="sr-only">Toggle navigation</span>
+                            <span class="sr-only white">Toggle navigation</span>
                             <span class="icon-grid-2x2"></span>
                         </button>
 
@@ -143,15 +143,20 @@
     </header>
 
     <!-- =========================
-     SECTION: SERVICES
+     SECTION: THIS IS WHAT WE DO
     ============================== -->
-    <section class="services" id="benefits">
+    <section class="services" id="benefits" style="margin-bottom: 80px;">
         <div class="container">
 
             <!-- SECTION HEADER -->
             <div class="section-header">
                 <h2 class="dark-text">
-                  <strong>Te ayudamos a planear tus juegos</strong>
+                  </br>
+                  Book a photo tour in over 230 destinations and
+                  </br>
+                  experience the city through the lens of a local photographer.
+                  </br>
+                  Your vacation photographer anywhere you go™
                 </h2>
             </div>
 
@@ -159,269 +164,136 @@
     </section>
 
     <!-- =========================
-     SECTION: BRIEF LEFT
+     SECTION: DEMOREEL 1
     ============================== -->
-    <section class="brief white-bg-border text-left" id="believe">
-        <div class="container">
-            <div class="row">
-
-                <!-- BRIEF IMAGE -->
-                <div class="col-md-6 pull-right wow fadeInRight" data-wow-offset="20" data-wow-duration="1s">
-                    <div class="brief-image-right">
-                        <img src="images/about-us.png" alt="">
-                    </div>
-                </div>
-
-                <!-- BRIEF HEADING -->
-                <div class="col-md-5 col-md-offset-1 content-section pull-left wow fadeInLeft" data-wow-offset="20" data-wow-duration="1s">
-                    <h2 class="text-left dark-text"><strong>Creemos en ti</strong></h2>
-                    <div class="colored-line-left">
-                    </div>
-                    <p class="text-left">
-                        GameMetrics es la web de analíticas que ayuda a los creadores de juegos a tener éxito. Nos importa como conectas con tus jugadores, por eso te damos solo las analíticas que necesitas en cada paso.
-                    </p>
-
-                    <!-- FEATURE LIST -->
-                    <div class="row">
-                        <div class="col-md-6 col-sm-6">
-                            <ul class="feature-list text-left">
-
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- =========================
-     SECTION: SOME STATS
-    ============================== -->
-    <section class="stats" data-stellar-background-ratio="0.5">
+    <section class="demoreel-1" data-stellar-background-ratio="0.5">
         <div class="overlay-layer-2">
-            <div class="container">
+            <div class="container" style="margin-top: 40px; margin-bottom: 80px;">
                 <div class="row no-gutters">
 
-                    <!-- SINGLE COLUMN WITH ICON -->
-                    <div class="col-md-4 col-sm-4 col-xs-4 single-stats wow fadeInLeft" data-wow-offset="10" data-wow-duration="1s">
-                        <div class="icon-container">
-                            <span class="colored-text-blue icon-basic-tablet"></span>
-                        </div>
-                        <h4 class="white-text">+25%</h4>
-                        <p class="uppercase transparent-text small-text">
-                            Retención
-                        </p>
-                    </div>
+                  <!-- SECTION HEADER -->
+                  <div class="section-header">
+                      <h2 class="white-text uppercase">
+                        New Year, New Adventures!
+                      </h1>
+                      <p class="white-text" style="margin-top: -35px;">
+                        </br>
+                        <strong>New to Shoot My Travel?</strong>
+                        </br>
+                        <strong>Use code: NEWTRAVELER and receive $10 your first experience</strong>
+                      </p>
+                  </div>
 
-                     <!-- SINGLE COLUMN WITH ICON -->
-                    <div class="col-md-4 col-sm-4 col-xs-4 single-stats border-left-colored border-right-colored wow fadeIn" data-wow-offset="10" data-wow-duration="1s">
-                        <div class="icon-container">
-                            <span class="colored-text-blue icon-speech-streamline-talk-user"></span>
-                        </div>
-                        <h4 class="white-text">+30%+</h4>
-                        <p class="uppercase transparent-text small-text">
-                            Jugadores
-                        </p>
-                    </div>
-
-                     <!-- SINGLE COLUMN WITH ICON -->
-                    <div class="col-md-4 col-sm-4 col-xs-4 single-stats wow fadeInRight" data-wow-offset="10" data-wow-duration="1s">
-                        <div class="icon-container">
-                            <span class="colored-text-blue icon-ecommerce-graph-increase"></span>
-                        </div>
-                        <h4 class="white-text">+45%</h4>
-                        <p class="uppercase transparent-text small-text">
-                            Ingresos
-                        </p>
-                    </div>
                 </div>
-
-                 <!-- CALL TO ACTION -->
-                <div class="stats-footer">
-                    <div class="long-transparent-line">
-                    </div>
-                    <p class="white-text">
-                        Mejora promedio de los juegos planificados con GameMetrics - <a href="" id="call-to-action-stats" class="strong inpage-scroll" data-toggle="modal" data-target="#stamp-modal">Empezar »</a>
-                    </p>
-                </div>
-
             </div>
         </div>
     </section>
 
     <!-- =========================
-     SECTION: PRICING
+     SECTION: THIS IS WHAT WE DO 2
     ============================== -->
-    <section class="pricing grey-bg" id="pricing">
+    <section class="services" id="benefits" style="margin-bottom: 80px;">
         <div class="container">
 
             <!-- SECTION HEADER -->
             <div class="section-header">
-                <h2 class="dark-text"><strong>Planes disponibles</strong></h2>
-                <div class="colored-line">
-                </div>
-                <div class="sub-heading">
-                    Planea gratis tus juegos y obtén funcionalidades avanzadas si las necesitas.
-                </div>
-            </div>
-
-            <!-- PRICING TABLE -->
-            <div class="row pricing-table">
-
-                <!-- SINGLE PACKAGE -->
-                <div class="col-md-4 col-md-offset-2 wow fadeInLeft" data-wow-offset="40" data-wow-duration="1s">
-                    <div class="single-pricing border-bottom-hover">
-
-                        <div class="package-title color-bg">
-                            <h3 class="white-text">Indie</h3>
-                            <div class="colored-line">
-                            </div>
-                        </div>
-
-                        <h2 class="price"><span class="superscript"></span>Free<span class="month small-text">&#8291;</span></h2>
-
-                        <ul class="package-list">
-                            <li><span class="dark-text strong"></span>Audiencia principal de tu juego</li>
-                            <li><span class="dark-text strong"></span>Pais donde enfocar tu marketing</li>
-                            <li><span class="dark-text strong"></span>Formulas de genero y tema</li>
-                        </ul>
-
-                        <div class="button">
-                            <a href="" id="call-to-action-pricing-indie" class="btn standard-button inpage-scroll" data-toggle="modal" data-target="#stamp-modal">Empezar</a>
-                        </div>
-
-                        <div class="small-text uppercase">
-                            Planea tus juegos gratis
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- SINGLE PACKAGE -->
-                <div class="col-md-4 wow fadeInRight" data-wow-offset="40" data-wow-duration="1s">
-                    <div class="single-pricing border-bottom-hover">
-
-                        <div class="package-title color-bg">
-                            <h3 class="white-text">Pro</h3>
-                        </div>
-
-                        <h2 class="price"><span class="superscript">$</span>25<span class="month small-text">Al mes</span></h2>
-
-                        <ul class="package-list">
-                            <li><span class="colored-text-blue strong">Filtros avanzados</span></li>
-                            <li><span class="colored-text-blue strong">Nuevas estrategias</span></li>
-                            <li><span class="colored-text-blue strong">Historial</span></li>
-                        </ul>
-
-                        <div class="button">
-                            <a href="" id="call-to-action-pricing-pro" class="btn standard-button inpage-scroll" data-toggle="modal" data-target="#stamp-modal">Empezar</a>
-                        </div>
-
-                        <div class="small-text uppercase">
-                            <span class="colored-text-blue"></span> Exprime su potencial
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- =========================
-     SECTION: TESTIMONIALS
-    ============================== -->
-    <section class="testimonials white-bg" id="testimonials">
-        <div class="container">
-
-            <!-- SECTION HEADER -->
-            <div class="section-header">
-                <h2 class="dark-text"><strong>Buenas experiencias</strong></h2>
-                <div class="colored-line">
-                </div>
-                <div class="sub-heading">
-                    Hemos ayudado a cientos de estudios a planear sus juegos.
-                </div>
-            </div>
-
-            <div class="row no-gutters">
-
-                <!-- SINGLE FEEDBACK -->
-                <div class="col-md-4 wow fadeInLeft" data-wow-offset="10" data-wow-duration="1s">
-                    <div class="feedback">
-                        <div class="pic-container">
-                            <img src="images/clients/1.jpg" alt="">
-                        </div>
-                        <p>
-                            “Usamos GameMetrics para entender cual era el mejor mercado para nuestro juego.”
-                        </p>
-                        <h5 class="colored-text-blue"><a href="" class="testimonials">Bradley Davis</a></h5>
-                        <div class="small-text">
-                            Knight Planet
-                        </div>
-                    </div>
-                </div>
-
-                <!-- SINGLE FEEDBACK -->
-                <div class="col-md-4 wow fadeIn" data-wow-offset="10" data-wow-duration="1s">
-                    <div class="feedback border-left border-right">
-                        <div class="pic-container">
-                            <img src="images/clients/2.jpg" alt="">
-                        </div>
-                        <p>
-                          “No puedo creer cuanta gente empieza su juego sin ni siquiera saber quien va a jugarlo.”
-                        </p>
-                        <h5 class="colored-text-blue"><a href="" class="testimonials">Eloisa Perez</a></h5>
-                        <div class="small-text">
-                            Red Symphony Studios
-                        </div>
-                    </div>
-                </div>
-
-                <!-- SINGLE FEEDBACK -->
-                <div class="col-md-4 wow fadeInRight" data-wow-offset="10" data-wow-duration="1s">
-                    <div id="feedback">
-                        <div class="feedback">
-                            <div class="pic-container">
-                                <img src="images/clients/3.jpg" alt="">
-                            </div>
-                            <p>
-                              “Acabamos de publicar nuestro segundo juego y esta vez el resultado está siendo totalmente distinto.”
-                            </p>
-                            <h5 class="colored-text-blue"><a href="" class="testimonials">Tomomi Tanaka</a></h5>
-                            <div class="small-text">
-                                Last Station Games
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <h2 class="dark-text">
+                  </br>
+                  Book a photo tour in over 230 destinations and
+                  </br>
+                  experience the city through the lens of a local photographer.
+                  </br>
+                  Your vacation photographer anywhere you go™
+                </h2>
             </div>
 
         </div>
     </section>
 
     <!-- =========================
-     SECTION: CALL TO ACTION
+     SECTION: DEMOREEL 2
     ============================== -->
-    <section class="call-to-action" id="footercta" data-stellar-background-ratio="0.1">
+    <section class="demoreel-2" data-stellar-background-ratio="0.5">
         <div class="overlay-layer-2">
-            <div class="container">
-                <div class="row">
+            <div class="container" style="margin-top: 40px; margin-bottom: 80px;">
+                <div class="row no-gutters">
 
-                    <div class="col-md-8 col-md-offset-2">
-
-                        <div class="uppercase colored-text-blue strong">
-                            Lleva tus juegos al siguiente nivel
-                        </div>
-
-                        <h2 class="white-text strong" data-wow-duration="1.75s" data-wow-offset="100">Usalo GRATIS!</h2>
-
-                        <button id="call-to-action-footer" class="btn btn-primary standard-button wow fadeInUp" data-wow-duration="1.75s" data-wow-offset="40" type="button" data-toggle="modal" data-target="#stamp-modal">Empezar</button>
-
-                    </div>
+                  <!-- SECTION HEADER -->
+                  <div class="section-header">
+                      <h2 class="white-text uppercase">
+                        New Year, New Adventures!
+                      </h1>
+                      <p class="white-text" style="margin-top: -35px;">
+                        </br>
+                        <strong>New to Shoot My Travel?</strong>
+                        </br>
+                        <strong>Use code: NEWTRAVELER and receive $10 your first experience</strong>
+                      </p>
+                  </div>
 
                 </div>
             </div>
+        </div>
+    </section>
+
+    <!-- =========================
+     SECTION: TMP B
+    ============================== -->
+    <section class="services" id="benefits" style="margin-bottom: 80px;">
+        <div class="container">
+
+            <!-- SECTION HEADER -->
+            <div class="section-header">
+                <h2 class="dark-text">
+                  </br>
+                  Book a photo tour in over 230 destinations and
+                  </br>
+                  experience the city through the lens of a local photographer.
+                  </br>
+                  Your vacation photographer anywhere you go™
+                </h2>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- =========================
+     SECTION: DEMOREEL 3
+    ============================== -->
+    <section class="demoreel-3" data-stellar-background-ratio="0.5">
+        <div class="overlay-layer-2">
+            <div class="container" style="margin-top: 140px; margin-bottom: 120px;">
+                <div class="row no-gutters">
+
+                  <!-- BUTTON -->
+                  <div class="button" style="margin-bottom: 75px;">
+                      <a href="#section1" class="btn btn-primary secondary-button uppercase">TRAVEL STORIES</a>
+                  </div>
+                  <!-- /END BUTTON -->
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- =========================
+     SECTION: TMP B
+    ============================== -->
+    <section class="services" id="benefits" style="margin-bottom: 80px;">
+        <div class="container">
+
+            <!-- SECTION HEADER -->
+            <div class="section-header">
+                <h2 class="dark-text">
+                  </br>
+                  Book a photo tour in over 230 destinations and
+                  </br>
+                  experience the city through the lens of a local photographer.
+                  </br>
+                  Your vacation photographer anywhere you go™
+                </h2>
+            </div>
+
         </div>
     </section>
 
@@ -451,20 +323,20 @@
 
     <!-- FOOTER -->
     <footer class="footer grey-bg">
-        ©2017 GameMetrics. Todos los derechos reservados
+        ©2017 Fran Kapilla. Todos los derechos reservados
 
         <!-- OPTIONAL FOOTER LINKS -->
         <ul class="footer-links small-text"></ul>
 
         <!-- SOCIAL ICONS -->
         <ul class="social-icons">
-            <li><a href="https://www.facebook.com/GameMetrics" class="social-media-footer"><span class="icon-social-facebook transparent-text-dark"></span></a>
+            <li><a href="#" class="social-media-footer"><span class="icon-social-facebook transparent-text-dark"></span></a>
             </li>
-            <li><a href="https://twitter.com/Game_Metrics" class="social-media-footer"><span class="icon-social-twitter transparent-text-dark"></span></a>
+            <li><a href="#" class="social-media-footer"><span class="icon-social-twitter transparent-text-dark"></span></a>
             </li>
-            <li><a href="https://www.instagram.com/gamemetrics" class="social-media-footer"><span class="icon-social-instagram transparent-text-dark"></span></a>
+            <li><a href="#" class="social-media-footer"><span class="icon-social-instagram transparent-text-dark"></span></a>
             </li>
-            <li><a href="https://www.linkedin.com/company/11146055/" class="social-media-footer"><span class="icon-social-linkedin transparent-text-dark"></span></a>
+            <li><a href="#" class="social-media-footer"><span class="icon-social-linkedin transparent-text-dark"></span></a>
             </li>
         </ul>
 
@@ -480,6 +352,7 @@
     <script src="js/jquery.nav.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/nivo-lightbox.min.js"></script>
+    <script src="js/jquery.videoBG.js"></script>
 
     <!-- CUSTOM JS  -->
     <script src="js/custom.js"></script>
