--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- =========================
      SECTION: THIS IS WHAT WE DO
     ============================== -->
-    <section class="services" id="benefits" style="margin-bottom: 80px;">
+    <section class="services" id="benefits">
         <div class="container">
 
             <!-- SECTION HEADER -->
@@ -192,7 +192,7 @@
     <!-- =========================
      SECTION: THIS IS WHAT WE DO 2
     ============================== -->
-    <section class="services" id="benefits" style="margin-bottom: 80px;">
+    <section class="services" id="benefits">
         <div class="container">
 
             <!-- SECTION HEADER -->
@@ -213,33 +213,31 @@
     <!-- =========================
      SECTION: DEMOREEL 2
     ============================== -->
-    <section class="demoreel-2" data-stellar-background-ratio="0.5">
-        <div class="overlay-layer-2">
-            <div class="container" style="margin-top: 40px; margin-bottom: 80px;">
-                <div class="row no-gutters">
+    <section class="demoreel-2">
+        <div class="container" style="margin-top: 40px;">
+            <div class="row no-gutters">
 
-                  <!-- SECTION HEADER -->
-                  <div class="section-header">
-                      <h2 class="white-text uppercase">
-                        New Year, New Adventures!
-                      </h1>
-                      <p class="white-text" style="margin-top: -35px;">
-                        </br>
-                        <strong>New to Shoot My Travel?</strong>
-                        </br>
-                        <strong>Use code: NEWTRAVELER and receive $10 your first experience</strong>
-                      </p>
-                  </div>
+              <!-- SECTION HEADER -->
+              <div class="section-header">
+                  <h2 class="white-text uppercase">
+                    New Year, New Adventures!
+                  </h1>
+                  <p class="white-text" style="margin-top: -35px;">
+                    </br>
+                    <strong>New to Shoot My Travel?</strong>
+                    </br>
+                    <strong>Use code: NEWTRAVELER and receive $10 your first experience</strong>
+                  </p>
+              </div>
 
-                </div>
             </div>
         </div>
     </section>
 
     <!-- =========================
-     SECTION: TMP B
+     SECTION: THIS IS WHAT WE DO 3
     ============================== -->
-    <section class="services" id="benefits" style="margin-bottom: 80px;">
+    <section class="services" id="benefits">
         <div class="container">
 
             <!-- SECTION HEADER -->
