--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <!-- =========================
      SECTION: THIS IS WHAT WE DO
     ============================== -->
-    <section class="services" id="benefits">
+    <section class="services" id="benefits" style="margin-bottom: 80px;">
         <div class="container">
 
             <!-- SECTION HEADER -->
@@ -192,7 +192,7 @@
     <!-- =========================
      SECTION: THIS IS WHAT WE DO 2
     ============================== -->
-    <section class="services" id="benefits">
+    <section class="services" id="benefits" style="margin-bottom: 80px;">
         <div class="container">
 
             <!-- SECTION HEADER -->
@@ -213,8 +213,8 @@
     <!-- =========================
      SECTION: DEMOREEL 2
     ============================== -->
-    <section class="demoreel-2">
-        <div class="container" style="margin-top: 40px;">
+    <section class="demoreel-2" data-stellar-background-ratio="0.5">
+        <div class="container" style="margin-top: 40px; margin-bottom: 80px;">
             <div class="row no-gutters">
 
               <!-- SECTION HEADER -->
@@ -235,9 +235,9 @@
     </section>
 
     <!-- =========================
-     SECTION: THIS IS WHAT WE DO 3
+     SECTION: TMP B
     ============================== -->
-    <section class="services" id="benefits">
+    <section class="services" id="benefits" style="margin-bottom: 80px;">
         <div class="container">
 
             <!-- SECTION HEADER -->
