--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                       </h1>
                       <p class="white-text" style="margin-top: -35px;">
                         </br>
-                        <strong>Images of the filming of Matryoshka</strong>
+                        <strong>Images of the filming of Matryoshka.</strong>
                         </br>
                         <strong> Extra details about cupiditat non laborum.</strong>
                       </p>
