--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <div class="section-header">
                 <h2 class="dark-text">
                   </br>
-                  In this paragraph is a call to action.
+                  This paragraph is a call to action.
                   </br>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed.
                   </br>
